tests/NormalTests/paczka1/fuzzy1/47646641.err
Error in line 2: Rwi A439 3,1
Error in line 10: Rwi S273 83,5
Error in line 9: DCLU7Hwp5U A344 54,6
Error in line 14: DCLU7Hwp5U S273 43,1
Error in line 25: fk6FagW5a A344 63,92
Error in line 17: fk6FagW5a A773 86,8
Error in line 28: xCtJGJOVS0G S273 16,3
Error in line 31: xCtJGJOVS0G A344 70,7
